--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
-pandas
-numpy
+pandas==2.2.3
+numpy==2.1.2
 scikit-learn
-matplotlib
-seaborn
-nltk
-wordcloud
-mlflow==2.2.2
-boto3
+matplotlib==3.9.2
+seaborn==0.13.2
+nltk==3.9.1
+wordcloud==1.9.3
+mlflow==2.17.0
+boto3==1.35.36
 awscli
 imblearn
 optuna
 xgboost
 imbalanced-learn
-lightgbm
+lightgbm==4.5.0
+Flask==3.0.3
+Flask_Cors==5.0.0
+joblib==1.4.2
+dvc[s3]
+-e .
