--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -67,7 +67,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Checkout
-        uses: actions/checkput@v3
+        uses: actions/checkout@v3
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
