--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -83,7 +83,7 @@ jobs:
       
       - name: Pull latest images
         run:  |
-          docker pull ${{secrets.AWS_ECR_LOGIN_URL}}/${{  secrets.ECR_REPOSITORY_NAME}}
+          docker pull ${{secrets.AWS_ECR_LOGIN_URL}}/${{  secrets.ECR_REPOSITORY_NAME }}:latest
 
       # - name: Stop and remove container if running
       #   runs: |
