--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -90,8 +90,11 @@ jobs:
       #   docker ps -q --filter "name=cnncls" | grep -q . && docker stop cnncls &&
 
       - name: Run Docker Image to serve users
-        run:  |
-          docker run -d -p 8080:8080  --name=cnncls -e  'AWS_ACCESS_KEY_ID=${{  secrets.AWS_ACCESS_KEY_ID}}' -e 'AWS_SECRET_ACCESS_KEY=${{  secrets.AWS_SECRET_ACCESS_KEY}}'
+        run: |
+          docker run -d -p 8080:8080 --name=cnncls \
+            -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+            -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+            $ECR_REGISTRY/$ECR_REPOSITORY:latest
       - name: Clean previous images and containers
         run:
           docker system prune -f
