--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -65,6 +65,11 @@ jobs:
   Continuous-Deployment:
     needs:  build-and-push-ecr-image
     runs-on: self-hosted
+    
+    env:
+      ECR_REGISTRY: ${{ secrets.AWS_ECR_LOGIN_URI }}
+      ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
