--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,67 +1,101 @@
 stages:
   data_ingestion:
-    cmd: python src/data/data_ingestion.py
+    cmd: python src/components/data_ingestion.py
     deps:
-    - src/data/data_ingestion.py
-    params:
-    - data_ingestion.test_size
+      - src/components/data_ingestion.py
+      - src/config/config.py
     outs:
-    - data/raw
+      - data/raw/train.csv
+      - data/raw/test.csv
 
   data_preprocessing:
-    cmd: python src/data/data_preprocessing.py
+    cmd: python src/components/data_preprocessing.py
     deps:
-    - data/raw/train.csv
-    - data/raw/test.csv
-    - src/data/data_preprocessing.py
+      - data/raw/train.csv
+      - data/raw/test.csv
+      - src/components/data_preprocessing.py
+      - src/config/config.py
     outs:
-    - data/interim
-  
+      - data/interim/train_processed.csv
+      - data/interim/test_processed.csv
 
-  model_building:
-    cmd: python src/model/model_building.py
+  model_trainer:
+    cmd: python src/components/model_trainer.py
     deps:
-    - data/interim/train_processed.csv
-    - src/model/model_building.py
-    params:
-    - model_building.max_features
-    - model_building.ngram_range
-    - model_building.learning_rate
-    - model_building.max_depth
-    - model_building.n_estimators
+      - src/components/model_trainer.py
+      - src/config/config.py
+      - src/entity/model_trainer_artifact.py
+      - src/entity/data_preprocessing_artifact.py
+      - data/interim/train_processed.csv
+      - src/utils/logger.py
     outs:
-    - lgbm_model.pkl
-    - tfidf_vectorizer.pkl
+      - models/trained_model.pkl
+      - models/tfidf_vectorizer.pkl
 
-  model evaluation and model_registration:
-    cmd: python src/model/re_model_eval_n_registry.py
+
+  model_evaluator:
+    cmd: python src/components/model_evaluator.py
     deps:
-    - lgbm_model.pkl
-    - tfidf_vectorizer.pkl
-    - data/interim/train_processed.csv
-    - data/interim/test_processed.csv
-    - src/model/re_model_eval_n_registry.py
+      - src/components/model_evaluator.py
+      - src/utils/logger.py
+
+      # Config
+      - src/config/config.yaml
+
+      # Artifacts from previous stages
+      - data/interim/test_processed.csv
+      - models/trained_model.pkl
+      - models/tfidf_vectorizer.pkl
+
     outs:
-    - experiment_info.json
+      - reports/experiment_info.json
+      - reports/confusion_matrix_Test_Data.png
+
+
+#   model_building:
+#     cmd: python src/model/model_building.py
+#     deps:
+#     - data/interim/train_processed.csv
+#     - src/model/model_building.py
+#     params:
+#     - model_building.max_features
+#     - model_building.ngram_range
+#     - model_building.learning_rate
+#     - model_building.max_depth
+#     - model_building.n_estimators
+#     outs:
+#     - lgbm_model.pkl
+#     - tfidf_vectorizer.pkl
+
+#   model evaluation and model_registration:
+#     cmd: python src/model/re_model_eval_n_registry.py
+#     deps:
+#     - lgbm_model.pkl
+#     - tfidf_vectorizer.pkl
+#     - data/interim/train_processed.csv
+#     - data/interim/test_processed.csv
+#     - src/model/re_model_eval_n_registry.py
+#     outs:
+#     - experiment_info.json
  
 
-#  model_evaluation:
-#    cmd: python src/model/model_evaluation.py
-#    deps:
-#    - lgbm_model.pkl
-#    - tfidf_vectorizer.pkl
-#    - data/interim/train_processed.csv
-#    - data/interim/test_processed.csv
-#    - src/model/model_evaluation.py
-#    outs:
-#    - experiment_info.json
-#
-#  
-#  model_registration:
-#    cmd: python src/model/register_model.py
-#    deps:
-#    - experiment_info.json
-#    - src/model/register_model.py
+# #  model_evaluation:
+# #    cmd: python src/model/model_evaluation.py
+# #    deps:
+# #    - lgbm_model.pkl
+# #    - tfidf_vectorizer.pkl
+# #    - data/interim/train_processed.csv
+# #    - data/interim/test_processed.csv
+# #    - src/model/model_evaluation.py
+# #    outs:
+# #    - experiment_info.json
+# #
+# #  
+# #  model_registration:
+# #    cmd: python src/model/register_model.py
+# #    deps:
+# #    - experiment_info.json
+# #    - src/model/register_model.py
 
 
   
