--- a/src/config/config.yaml
+++ b/src/config/config.yaml
@@ -16,7 +16,14 @@ model_trainer:
 
 model_evaluator:
    root_dir: ""
-   metric_output_path: evaluation_info
-   acceptance_threshold: 0.7
-   mlflow_tracking_uri: http://ec2-13-245-159-214.af-south-1.compute.amazonaws.com:5000/
-   mlflow_experiment_name: dvc-pipeline-runs
+   metric_output_path: reports/metrics.json
+   acceptance_threshold: 0.75
+   mlflow_tracking_uri: http://ec2-13-244-179-88.af-south-1.compute.amazonaws.com:5000/
+   mlflow_experiment_name: dvc-pipeline-runs-test2
+   mlflow_registered_model_name: yt_insights_classifier
+
+
+flask_api:
+    model_name: yt_insights_classifier
+    model_version: 1
+    mlflow_tracking_uri: http://ec2-13-244-179-88.af-south-1.compute.amazonaws.com:5000/
