cicd updated to stop and rm existing docker containers against conflict

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -90,9 +90,9 @@ jobs:
         run:  |
           docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{secrets.ECR_REPOSITORY_NAME}}:latest
 
-      # - name: Stop and remove container if running
-      #   runs: |
-      #   docker ps -q --filter "name=cnncls" | grep -q . && docker stop cnncls &&
+      - name: Stop and remove container if running
+        runs: |
+          docker ps -q --filter "name=cnncls" | grep -q . && docker stop cnncls && docker rm cnncls
       
       - name: Debug Image Name
         run: echo "IMAGE = $ECR_REGISTRY/$ECR_REPOSITORY:latest"
