--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -91,7 +91,7 @@ jobs:
           docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{secrets.ECR_REPOSITORY_NAME}}:latest
 
       - name: Stop and remove container if running
-        runs: |
+        run: |
           docker ps -q --filter "name=cnncls" | grep -q . && docker stop cnncls && docker rm cnncls
       
       - name: Debug Image Name
