--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-    paths-ighnore:
+    paths-ignore:
       - 'README.md'
 
 permissions:
@@ -59,10 +59,11 @@ jobs:
           # push it to ECR so that it can be deployed to EC2
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
 
-  Continuous-Deployment:
+
+  continuous-deployment:
     needs:  build-and-push-ecr-image
     runs-on: self-hosted
     
